<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/navigation_drawer_profile" />
        <item
            android:id="@+id/weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/navigation_drawer_weather" />
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/navigation_drawer_location" />
    </group>
    <item android:title="@string/item_title">
        <menu>
            <item
                android:id="@+id/notifications"
                android:icon="@drawable/ic_notifications_active_black_24dp"
                android:title="@string/navigation_drawer_notications" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/navigation_drawer_settings" />
        </menu>
    </item>
</menu>