<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mutahi.hotelmanagementapp.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:background="@color/colorAccent"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TabItem
            android:id="@+id/tab_chats"
            android:text="@string/chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <android.support.design.widget.TabItem
                android:id="@+id/tab_status"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TabItem
                android:id="@+id/tab_calls"
                android:text="@string/calls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
